Feature/931 delete member dev branch v2 (#1173)
* server part for deleting a user

* frontend: customizable ConfirmDialog

* frontend: add deleteUser() to user.service + test

* frontend: implement deleteUser() without checks + tests

* frontend: implement deleteUserWithChecks() + tests

* frontend: change in Enum form Snake_Case to PascalCase